--- a/404.md
+++ b/404.md
@@ -1,3 +1,3 @@
-#Oops, 404.
+# Oops, 404.
 
-##~~Try using sear~~ oh, there is no search, nevermind
+### ~~Try using sear~~ oh, there is no search, nevermind
